--- a/views/home.html
+++ b/views/home.html
@@ -4,17 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lyft jquery</title>
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
- <section class="main">
-   <p class="row">Hola Mundo!</p>
+ <section class="home">
+ <div class="logo">
+  <img src="../assets/img/logo-white.png">
+  </div>
+   <button class="boton">Log in</button>
+   <button class="boton">Sign up</button>
  </section>
   <!-- Scripts jQuery, materialize y propio-->
-  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-  <script src="js/app.js"></script>
+  <script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="../js/materialize.min.js"></script>
 </body>
 </html>
