Uniendo parte de maquetacion signout

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -24,7 +24,7 @@
       <div class="contenedor-botones">
         <div class="row">
           <button class="col s5 m6 boton-registro">Log in</button>
-          <button class="col s6 m6 boton-registro">Sign up</button>
+          <button id="signup" class="col s6 m6 boton-registro">Sign up</button>
         </div>
       </div>
     </section>
@@ -32,6 +32,7 @@
   <!-- Scripts jQuery, materialize y propio-->
   <script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="../js/materialize.min.js"></script>
+  <script src="../js/home.js"></script>
 </body>
 
 </html>
