quedan ultimos detalles en validacion

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>jQuery</title>
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link type="image/x" rel="shortcut icon" href="../assets/img/favicon.ico">
   <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -21,10 +22,10 @@
       </div>
     </section>
     <section class="botones">
-      <div class="contenedor-botones">
+      <div class="contenedor-botones container">
         <div class="row">
-          <button class="col s5 m6 boton-registro">Log in</button>
-          <button id="signup" class="col s6 m6 boton-registro">Sign up</button>
+          <button class="col s6 m6 boton-registro">Log in</button>
+          <button id="signup" class="col s5 m5 boton-registro">Sign up</button>
         </div>
       </div>
     </section>
