--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,3 @@
-
-
-
-
-
 /* Estilo para Index */
 
 .main {
@@ -28,13 +23,12 @@
   padding-top: 5%;
 }
 
-
 .home .img-responsive {
   width: 20%;
 }
 
 .contenedor-botones {
-  margin-top: 70%;
+  padding-top: 250px;
 }
 
 .boton-registro {
@@ -42,11 +36,38 @@
   background-color: #d81b60;
   height: 10vh;
   color: #FFF;
-  font-size: 3rem;
+  font-size: 2rem;
   width: 80%;
   margin: 2%;
 }
 
 .boton-registro:hover {
   background-color: transparent;
+}
+
+
+/* Sección Signup ingresas tu número de teléfono*/
+
+.signup img {
+  width: 2em;
+}
+
+
+.telefono {
+  font-size: 1rem;
+}
+
+.none-decoration {
+  text-decoration: none;
+}
+.white {
+    color: #FFF;
+    background-color: #D806A3;
+    padding: 21px 0px;
+    display: inline-block;
+    width: 100%;
+}
+
+.alerta {
+	box-shadow: 1px 2px 4px rgba(254, 0, 0, .5);
 }
