--- a/public/views/signout.html
+++ b/public/views/signout.html
@@ -3,35 +3,55 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>jQuery</title>
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="image/x" rel="shortcut icon" href="../assets/img/favicon.ico">
   <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
-  <section class="container">
-    <h1>Sign up</h1>
-    <p>Join now for free ride credit</p>
+  <section class="container signup">
+    <a href="home.html">
+      <span><i class="material-icons">navigate_before</i></span>
+    </a>
+    <div class="row center-align">
+      <h1>Sign up</h1>
+      <p>Join now for free ride credit</p>
+    </div>
     <div class="row signup">
       <form class="col s12">
-        <select class="browser-default">
-          <option value="1" selected disabled><img src="../assets/img/mexico.png"></option>
-          <option value="2">Option 2</option>
-        </select>
-
-        <div class="input-field col s6">
-          <input id="first_name" type="text" class="validate">
-          <label for="first_name">First Name</label>
-        </div>
-
-     </form>
+        <span class="input-field ">
+        <div class="col">
+         <button class="btn pink darken-1" type="button">
+           <img class="responsive-img" src="../assets/img/mexico.png">
+           <i class="material-icons">keyboard_arrow_down</i>
+           </button>
+         </div>
+         <div class="col s2 m1">
+         <button class="btn pink darken-1" type="button">+52</button>
+         </div>
+         <div class="col s6 offset-s1">
+          <input id="telefono" type="tel" placeholder="5543678792" class="validate">
+          <label for="icon_telephone"></label>
+          </div>
+        </span>
+      </form>
     </div>
-    <p>We'll send a text to verify your phone</p>
+
+
+
+    <p class="center-align">We'll send a text to verify your phone</p>
   </section>
-  </div>
+  <footer class="white row col s12 pink darken-1">
+    <div class="center-align">
+      <a id="enviar" class="none-decoration waves-effect waves-light" type="submit" name="action">Next
+    <i class="material-icons right">send</i></a>
+    </div>
+  </footer>
+
 
 
 </body>
